--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
